[gd_scene load_steps=2 format=3 uid="uid://der47yc2tnjrh"]

[ext_resource type="Script" path="res://src/Country.gd" id="1_711qb"]

[node name="Country" type="Node2D"]
script = ExtResource("1_711qb")

[node name="Panel" type="Panel" parent="."]
offset_left = -3.0
offset_top = 1.0
offset_right = 393.0
offset_bottom = 133.0

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 400.0
offset_bottom = 126.0
columns = 2

[node name="PopText" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Population: "

[node name="PopVal" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "0"

[node name="AwareText" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Aware: "

[node name="AwareVal" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "0"

[node name="FollowersText" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Followers: "

[node name="FollowersVal" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "0"

[node name="ActorText" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "Actors: "

[node name="ActorVal" type="Label" parent="Panel/GridContainer"]
layout_mode = 2
text = "0"
